argocd/apps/temporal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stacks
  namespace: temporal
  labels:
    app.kubernetes.io/name: temporal
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.drewpayment.com"
    external-dns.home.arpa/enabled: "true"
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: temporal.png
    gethomepage.dev/name: Temporal
spec:
  ingressClassName: external
  rules:
    - host: &host 'temporal.drewpayment.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stacks
                port:
                  name: http
  tls:
  - hosts:
    - *host
